--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </form>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-<script src="js/jq-quickvalidate.js"></script>
+<script src="js/jq-quickvalidate-min.js"></script>
 <script>
     var $form = $('#my-form');
     $form.quickValidate({
