icons, more changes, optimization

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 <h2>A small and extensible jQuery validation plugin</h2>
 
 <form id="my-form">
-    <p><label>Username <span>*</span>:</label><input name="username" type="text"/></p>
-    <p><label>Password <span>*</span>:</label><input name="pass" type="password"/></p>
-    <p><label>Random:</label><input name="random" type="text"/></p>
+    <p><label>Username:</label><input name="username" type="text"/></p>
+    <p><label>Password:</label><input name="pass" type="password"/></p>
     <p><label>E-Mail:</label><input name="email" type="text"/></p>
     <p><label>Date:</label><input name="date" type="text" placeholder="mm/dd/yy"/></p>
+    <p><label>Random:</label><input name="random" type="text"/></p>
     <p><label>&nbsp;</label><button type="submit">Submit</button></p>
     <div style="clear: both;"></div>
 </form>
@@ -46,11 +46,7 @@
                 filters: 'date'
             },
             'random': {
-                filters: 'min max',
-                data: {
-                    min: 3,
-                    max: 10
-                }
+                filters: 'digits'
             }
         }
     });
