css update, gradients

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 }
             },
             'pass': {
-                filters: 'required pass'
+                filters: 'required pass',
             },
             'email': {
                 filters: 'email'
