--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <link href="css/normalize.css" rel="stylesheet"/>
 <link href="css/jq-quickvalidate.css" rel="stylesheet" media="screen"/>
 <link href="css/styles.css" rel="stylesheet" media="screen"/>
+<script src="js/respond.js"></script>
 </head>
 <body>
 
@@ -18,7 +19,7 @@
     <p><label>E-Mail:</label><input name="email" type="text"/></p>
     <p><label>Date:</label><input name="date" type="text" placeholder="mm/dd/yy"/></p>
     <p><label>Random:</label><input name="random" type="text"/></p>
-    <p><label>&nbsp;</label><button type="submit">Submit</button></p>
+    <p><label></label><button type="submit">Submit</button></p>
     <div style="clear: both;"></div>
 </form>
 
