--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta charset="utf-8"/>
 <title>jq-quickvalidate</title>
 <link href="css/normalize.css" rel="stylesheet"/>
 <link href="css/jq-quickvalidate.css" rel="stylesheet" media="screen"/>
 <link href="css/styles.css" rel="stylesheet" media="screen"/>
-<script src="js/respond.js"></script>
 </head>
 <body>
 
